[package]
name = "{{project-name}}"
version = "0.1.0"
description = "{{description}}"
authors = ["Shane Witbeck <shane@digitalsanctum.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/{{github_user}}/{{project-name}}"
repository = "https://github.com/{{github_user}}/{{project-name}}"
keywords = ["{{project-name}}"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
actix-web = "4.0.1"
env_logger = "0.9.0"
json = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
